# Directle

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
http_server/: Cargo.toml
sql_server/: Cargo.toml  word.db
sql_server/src/: main.rs  word.rs
src/: hello.html  main.rs
