[package]
name = "directle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "directle"
path = "src/main.rs"
